Remove social media meta tags

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,10 +6,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="QuizCanvas - Your customizable learning platform for quizzes, exams, and certifications"
-    />
+      <meta
+        name="description"
+        content="QuizCanvas - Your customizable learning platform for quizzes, exams, and certifications"
+      />
+      <!-- Canonical link for SEO -->
+      <link rel="canonical" href="https://quizcanvas.xyz/" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>QuizCanvas - Customizable Learning Platform</title>
     <!-- Add SPA redirect script for GitHub Pages -->
